// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNFT loads all auctions 1`] = `
Array [
  Object {
    "approved": true,
    "approvedTimestamp": "12974",
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
      "transactionHash": "Hello World",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "0",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "3",
        "transactionHash": "Hello World",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "4",
        "transactionHash": "Hello World",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "token": "Hello World",
    "tokenContract": "Hello World",
    "tokenId": 0,
    "tokenOwner": Object {
      "id": "10",
    },
    "transactionHash": "Hello World",
  },
  Object {
    "approved": true,
    "approvedTimestamp": "12974",
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
      "transactionHash": "Hello World",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "1",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "6",
        "transactionHash": "Hello World",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "7",
        "transactionHash": "Hello World",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "token": "Hello World",
    "tokenContract": "Hello World",
    "tokenId": 1,
    "tokenOwner": Object {
      "id": "10",
    },
    "transactionHash": "Hello World",
  },
]
`;

exports[`useNFT loads specific auctions for a given curator 1`] = `
Array [
  Object {
    "approved": true,
    "approvedTimestamp": "12974",
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
      "transactionHash": "Hello World",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "0",
    "media": Object {
      "contentHash": "ByTeSStrInG",
      "contentURI": "Hello World",
      "createdAtTimestamp": "12974",
      "creator": Object {
        "id": "10",
      },
      "creatorBidShare": "12974",
      "currentAsk": Object {
        "amount": "12974",
        "createdAtTimestamp": "12974",
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "id": "6",
      },
      "id": "5",
      "metadataHash": "ByTeSStrInG",
      "metadataURI": "Hello World",
      "owner": Object {
        "id": "10",
      },
      "ownerBidShare": "12974",
    },
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "3",
        "transactionHash": "Hello World",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "4",
        "transactionHash": "Hello World",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "token": "Hello World",
    "tokenContract": "Hello World",
    "tokenId": 2,
    "tokenOwner": Object {
      "id": "10",
    },
    "transactionHash": "Hello World",
  },
  Object {
    "approved": true,
    "approvedTimestamp": "12974",
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
      "transactionHash": "Hello World",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "1",
    "media": Object {
      "contentHash": "ByTeSStrInG",
      "contentURI": "Hello World",
      "createdAtTimestamp": "12974",
      "creator": Object {
        "id": "10",
      },
      "creatorBidShare": "12974",
      "currentAsk": Object {
        "amount": "12974",
        "createdAtTimestamp": "12974",
        "currency": Object {
          "decimals": 18,
          "id": "0xFACE",
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
        "id": "11",
      },
      "id": "10",
      "metadataHash": "ByTeSStrInG",
      "metadataURI": "Hello World",
      "owner": Object {
        "id": "10",
      },
      "ownerBidShare": "12974",
    },
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "8",
        "transactionHash": "Hello World",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "9",
        "transactionHash": "Hello World",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "token": "Hello World",
    "tokenContract": "Hello World",
    "tokenId": 3,
    "tokenOwner": Object {
      "id": "10",
    },
    "transactionHash": "Hello World",
  },
]
`;
